<resources>


    <string name="user_name" translatable="false"></string>
    <string name="resetpwd_success" />
    <string name="resetpwd_fail" />
    <string name="name_not_exist" />
    <string name="account_empty" />
    <string name="pwd_empty" />
    <string name="pwd_new_empty" />
    <string name="pwd_check_empty" />
    <string name="pwd_not_fit_user" />
    <string name="pwd_not_the_same" />

    <string name="app_name">Sign-In</string>
    <string name="app_login_password">密码</string>
    <string name="app_login_password_write">请输入密码</string>
    <string name="app_login_account">账号</string>
    <string name="app_login_account_write">请输入账号</string>
    <string name="app_login_tag">欢迎使用签到系统</string>
    <string name="tv_home1">首页</string>
    <string name="home_bt_1">发起签到</string>
    <string name="home_bt_2">查看发起的签到</string>
    <string name="home_bt_3">个人中心</string>
    <string name="home_et_1">输入签到码</string>
</resources>